tarpc/tests/compile_fail/serde1/incompatible.stderr
error: tarpc does not support `derive_serde` and `derive` at the same time
 --> tests/compile_fail/serde1/incompatible.rs:2:1
  |
2 | #[tarpc::service(derive = [Clone], derive_serde = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `tarpc::service` (in Nightly builds, run with -Z macro-backtrace for more info)
